; ModuleID = '/home/carl/AnghaBench/GloVe/src/extr_shuffle.c_write_chunk.c'
source_filename = "/home/carl/AnghaBench/GloVe/src/extr_shuffle.c_write_chunk.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @write_chunk(i32* %0, i64 %1, i32* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i64, align 8
  store i32* %0, i32** %4, align 8
  store i64 %1, i64* %5, align 8
  store i32* %2, i32** %6, align 8
  store i64 0, i64* %7, align 8
  store i64 0, i64* %7, align 8
  br label %8

8:                                                ; preds = %18, %3
  %9 = load i64, i64* %7, align 8
  %10 = load i64, i64* %5, align 8
  %11 = icmp slt i64 %9, %10
  br i1 %11, label %12, label %21

12:                                               ; preds = %8
  %13 = load i32*, i32** %4, align 8
  %14 = load i64, i64* %7, align 8
  %15 = getelementptr inbounds i32, i32* %13, i64 %14
  %16 = load i32*, i32** %6, align 8
  %17 = call i32 @fwrite(i32* %15, i32 4, i32 1, i32* %16)
  br label %18

18:                                               ; preds = %12
  %19 = load i64, i64* %7, align 8
  %20 = add nsw i64 %19, 1
  store i64 %20, i64* %7, align 8
  br label %8

21:                                               ; preds = %8
  ret i32 0
}

declare dso_local i32 @fwrite(i32*, i32, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
